# vibes

./: .gitignore  README.md  bumpVersion.js  git_tag  index.html  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  release.yml
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AddToPlaylist.jsx  AddtoPlayList.jsx  Loading.jsx  MainContent.jsx  Player.jsx  PlaylistForm.jsx  Queue.jsx  Sidebar.jsx  SyncUI.jsx  TitleBar.jsx
src/context/: PlayerContext.jsx  SyncContext.jsx
src/data/: db.ts  db_utils.ts  mockData.js  utils.js
src/hooks/: useOnlineStatus.jsx
src/pages/: AccountPage.jsx  ArtistPage.jsx  LibraryPage.jsx  PlaylistPage.jsx  SearchPage.jsx
