[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# 👇 CORE TAURI (No features here!)
tauri = { version = "2", features = [] } 

# 👇 NEW PLUGINS (This is how V2 handles fs, dialog, shell)
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"

# 👇 YOUR LOGIC TOOLS
lofty = "0.15"  # Metadata
walkdir = "2"   # Recursive Scan
base64 = "0.21"
regex = "1.10"
dirs = "6.0.0"
